--- a/VisualCrypt.Desktop.ModuleEditor/Views/Editor.xaml
+++ b/VisualCrypt.Desktop.ModuleEditor/Views/Editor.xaml
@@ -6,9 +6,11 @@
              xmlns:commands="clr-namespace:VisualCrypt.Desktop.Shared.Commands;assembly=VisualCrypt.Desktop.Shared"
              xmlns:valueConverters="clr-namespace:VisualCrypt.Desktop.Shared.ValueConverters;assembly=VisualCrypt.Desktop.Shared"
              xmlns:state="clr-namespace:VisualCrypt.Desktop.Shared.App;assembly=VisualCrypt.Desktop.Shared"
+             xmlns:views="clr-namespace:VisualCrypt.Desktop.ModuleEditor.Views"
              mc:Ignorable="d"
+             
              d:DesignHeight="300" d:DesignWidth="300"
-             VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+             VerticalAlignment="Stretch" HorizontalAlignment="Stretch" d:DataContext="{d:DesignInstance views:EditorViewModel}">
     <UserControl.Resources>
         <valueConverters:BoolTextWrappingConverter x:Key="BoolTextWrappingConverter" />
     </UserControl.Resources>
@@ -106,8 +108,10 @@
             </Grid.Resources>
 
             <Grid>
-                <TabControl x:Name="TabControl1" Height="Auto" SelectedIndex="{Binding TabControlSelectedIndex, Mode=TwoWay}"
+                <TabControl  Height="Auto" SelectedIndex="{Binding ToolAreaSelectedIndex, Mode=TwoWay}"
+                             SelectedItem="{Binding ToolAreaSelectedItem, Mode=TwoWay}"
                              Background="{DynamicResource BarColorBrush}" BorderThickness="0"
+                             SelectionChanged="ToolArea_OnSelectionChanged"
                             >
                     <TabItem>
                         <TabItem.Header>
@@ -178,16 +182,22 @@
                             <TextBlock Style="{StaticResource DialogH1Style}" Text="Go"></TextBlock>
                         </TabItem.Header>
                         <StackPanel>
-                            <TextBlock Margin="5">Line Number:</TextBlock>
+                            <StackPanel Orientation="Horizontal">
+                            <TextBlock Margin="10,0,0,0">Line Number (1-</TextBlock>
+                                <TextBlock Margin="0" Text="{Binding LineCount}"></TextBlock>
+                                <TextBlock Margin="0" Text="):"></TextBlock>
+                            </StackPanel>
                             <TextBox Margin="5" x:Name="TextBoxGotoString"
                      Text="{Binding LineNo, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" />
-                            <DockPanel>
+                          
 
                                 <Button Margin="5" IsDefault="True" HorizontalAlignment="Right" Width="65"
-                         Click="ButtonGoTo_OnClick">
+                         Command="{Binding GoButtonCommand}">
                                     Go
                                 </Button>
-                            </DockPanel>
+                            <TextBlock>Ctrl+G | Go </TextBlock>
+                            <TextBlock>ESC | Close</TextBlock>
+                         
                         </StackPanel>
                     </TabItem>
                 </TabControl>
