--- a/VisualCrypt.Desktop.ModuleEditor/Views/Editor.xaml
+++ b/VisualCrypt.Desktop.ModuleEditor/Views/Editor.xaml
@@ -8,7 +8,6 @@
              xmlns:state="clr-namespace:VisualCrypt.Desktop.Shared.App;assembly=VisualCrypt.Desktop.Shared"
              xmlns:views="clr-namespace:VisualCrypt.Desktop.ModuleEditor.Views"
              mc:Ignorable="d"
-             
              d:DesignHeight="300" d:DesignWidth="300"
              VerticalAlignment="Stretch" HorizontalAlignment="Stretch" d:DataContext="{d:DesignInstance views:EditorViewModel}">
     <UserControl.Resources>
@@ -52,7 +51,6 @@
              Text=""
              BorderBrush="{x:Static SystemColors.MenuBarBrush}"
              VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto"
-             Focusable="True"
              TextWrapping="{Binding Source={x:Static state:SettingsManager.EditorSettings}, Path=IsWordWrapChecked, Mode=OneWay, Converter={StaticResource BoolTextWrappingConverter}}"
              SpellCheck.IsEnabled="{Binding Source={x:Static state:SettingsManager.EditorSettings}, Path=IsSpellCheckingChecked, Mode=TwoWay}">
 
@@ -60,6 +58,7 @@
             <TextBox.Style>
                 <Style TargetType="TextBox">
                     <Setter Property="VerticalScrollBarVisibility" Value="Visible" />
+                   
                     <Setter Property="Template">
                         <Setter.Value>
                             <ControlTemplate TargetType="{x:Type TextBox}">
@@ -76,7 +75,7 @@
                                         <Setter Property="Opacity" TargetName="border" Value="0.15"/>
                                     </Trigger>
                                     <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="BorderBrush" TargetName="border" Value="Silver"/>
+                                        <!--<Setter Property="BorderBrush" TargetName="border" Value="Silver"/>-->
                                     </Trigger>
 
                                 </ControlTemplate.Triggers>
@@ -100,107 +99,141 @@
                 </Style>
             </TextBox.Style>
         </TextBox>
-        <Grid Grid.Column="1"  Background="{DynamicResource BarColorBrush}"
+        <Grid Grid.Column="1"  Background="{DynamicResource BarColorBrush}" IsVisibleChanged="ToolArea_OnIsVisibleChanged"
               Visibility="{Binding Source={x:Static state:SettingsManager.EditorSettings}, Path=IsToolAreaChecked, Converter={StaticResource BoolVisibilityConverter}}"
               >
             <Grid.Resources>
-                    <ResourceDictionary Source="pack://application:,,,/VisualCrypt.Desktop.Shared;component/Styles/DialogStyles.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/VisualCrypt.Desktop.Shared;component/Styles/DialogStyles.xaml" />
             </Grid.Resources>
 
             <Grid>
-                <TabControl  Height="Auto" SelectedIndex="{Binding ToolAreaSelectedIndex, Mode=TwoWay}"
-                             SelectedItem="{Binding ToolAreaSelectedItem, Mode=TwoWay}"
+               
+                    
+                  
+                    <TabControl x:Name="TabControl" Height="Auto" SelectedIndex="{Binding ToolAreaSelectedIndex, Mode=TwoWay}"
+                           
                              Background="{DynamicResource BarColorBrush}" BorderThickness="0"
-                             SelectionChanged="ToolArea_OnSelectionChanged"
+                             SelectionChanged="ToolArea_OnSelectionChanged" IsTabStop="False"
+                              
                             >
-                    <TabItem>
-                        <TabItem.Header>
-                            <TextBlock Style="{StaticResource DialogH1Style}" Text="Find"></TextBlock>
-                        </TabItem.Header>
-                        <StackPanel HorizontalAlignment="Stretch">
-                            <TextBox Margin="5" x:Name="TextBoxFindFindString"
+
+                        <TabItem IsTabStop="False">
+                            <TabItem.Header>
+                                <TextBlock Style="{StaticResource DialogH1Style}" Text="Find"></TextBlock>
+                            </TabItem.Header>
+                            <StackPanel HorizontalAlignment="Stretch">
+                                <TextBox Margin="5" x:Name="TextBoxFindFindString"
                              Text="{Binding FindString, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" />
-                            <StackPanel HorizontalAlignment="Right">
-                                <Button IsDefault="True" Command="{Binding FindNextCommand}">
-                                    Find
-                                </Button>
-                            </StackPanel>
-                            <StackPanel Orientation="Horizontal">
-                                <StackPanel Margin="0">
-                                    <CheckBox Margin="5" IsChecked="{Binding SearchOptions.MatchCase, Mode=TwoWay}">Match case</CheckBox>
-                                    <CheckBox Margin="5" IsChecked="{Binding SearchOptions.MatchWholeWord, Mode=TwoWay}">Match whole word</CheckBox>
-                                </StackPanel>
-                                <StackPanel Margin="0">
-                                    <CheckBox Margin="5" IsChecked="{Binding SearchOptions.SearchUp, Mode=TwoWay}">Search up</CheckBox>
-                                    <CheckBox Margin="5" IsChecked="{Binding SearchOptions.UseRegEx, Mode=TwoWay}">Use Regular Expressions</CheckBox>
-                                </StackPanel>
-                            </StackPanel>
-                        </StackPanel>
-                    </TabItem>
-                    <TabItem>
-                        <TabItem.Header>
-                            <TextBlock Style="{StaticResource DialogH1Style}" Text="Replace"></TextBlock>
-                        </TabItem.Header>
-                        <StackPanel>
-                            <TextBox x:Name="TextBoxReplaceFindString" Margin="5"
-                             Text="{Binding FindString, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" />
-                            <TextBlock Margin="5">Replace with:</TextBlock>
-                            <TextBox x:Name="TextBoxReplaceString" Margin="5"
-                             Text="{Binding ReplaceString, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                            <DockPanel>
-                                <TextBlock Margin="5" Text="{Binding PositionString}" />
-                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                                    <Button Command="{Binding FindNextCommand}">
+                                <StackPanel HorizontalAlignment="Right">
+                                    <Button IsDefault="True" Command="{Binding FindNextCommand}">
                                         Find
                                     </Button>
-                                    <Button IsDefault="True"
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal">
+                                    <StackPanel Margin="0">
+                                        <CheckBox Margin="5" IsChecked="{Binding SearchOptions.MatchCase, Mode=TwoWay}">Match case</CheckBox>
+                                        <CheckBox Margin="5" IsChecked="{Binding SearchOptions.MatchWholeWord, Mode=TwoWay}">Match whole word</CheckBox>
+                                    </StackPanel>
+                                    <StackPanel Margin="0">
+                                        <CheckBox Margin="5" IsChecked="{Binding SearchOptions.SearchUp, Mode=TwoWay}">Search up</CheckBox>
+                                        <CheckBox Margin="5" IsChecked="{Binding SearchOptions.UseRegEx, Mode=TwoWay}">Use Regular Expressions</CheckBox>
+                                    </StackPanel>
+                                </StackPanel>
+                            </StackPanel>
+                        </TabItem>
+                        <TabItem IsTabStop="False">
+                            <TabItem.Header>
+                                <TextBlock Style="{StaticResource DialogH1Style}" Text="Replace"></TextBlock>
+                            </TabItem.Header>
+                            <StackPanel>
+                                <TextBox x:Name="TextBoxReplaceFindString" Margin="5"
+                             Text="{Binding FindString, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" />
+                                <TextBlock Margin="5">Replace with:</TextBlock>
+                                <TextBox x:Name="TextBoxReplaceString" Margin="5"
+                             Text="{Binding ReplaceString, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                <DockPanel>
+                                    <TextBlock Margin="5" Text="{Binding PositionString}" />
+                                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                                        <Button Command="{Binding FindNextCommand}"  IsDefault="True">
+                                            Find
+                                        </Button>
+                                        <Button
                                     Command="{Binding ReplaceCommand}">
-                                        Replace
-                                    </Button>
-                                    <Button 
+                                            Replace
+                                        </Button>
+                                        <Button 
                                     Command="{Binding ReplaceAllCommand}">
-                                        Replace all
-                                    </Button>
-                                </StackPanel>
-                            </DockPanel>
+                                            Replace all
+                                        </Button>
+                                    </StackPanel>
+                                </DockPanel>
 
-                            <StackPanel Orientation="Horizontal">
-                                <StackPanel Margin="0">
-                                    <CheckBox Margin="5" IsChecked="{Binding SearchOptions.MatchCase, Mode=TwoWay}">Match case</CheckBox>
-                                    <CheckBox Margin="5" IsChecked="{Binding SearchOptions.MatchWholeWord, Mode=TwoWay}">Match whole word</CheckBox>
+                                <StackPanel Orientation="Horizontal">
+                                    <StackPanel Margin="0">
+                                        <CheckBox Margin="5" IsChecked="{Binding SearchOptions.MatchCase, Mode=TwoWay}">Match case</CheckBox>
+                                        <CheckBox Margin="5" IsChecked="{Binding SearchOptions.MatchWholeWord, Mode=TwoWay}">Match whole word</CheckBox>
+                                    </StackPanel>
+                                    <StackPanel Margin="0">
+                                        <CheckBox Margin="5" IsChecked="{Binding SearchOptions.SearchUp, Mode=TwoWay}">Search up</CheckBox>
+                                        <CheckBox Margin="5" IsChecked="{Binding SearchOptions.UseRegEx, Mode=TwoWay}">Use Regular Expressions</CheckBox>
+                                    </StackPanel>
                                 </StackPanel>
-                                <StackPanel Margin="0">
-                                    <CheckBox Margin="5" IsChecked="{Binding SearchOptions.SearchUp, Mode=TwoWay}">Search up</CheckBox>
-                                    <CheckBox Margin="5" IsChecked="{Binding SearchOptions.UseRegEx, Mode=TwoWay}">Use Regular Expressions</CheckBox>
-                                </StackPanel>
-                            </StackPanel>
 
-                        </StackPanel>
-                    </TabItem>
-                    <TabItem>
-                        <TabItem.Header>
-                            <TextBlock Style="{StaticResource DialogH1Style}" Text="Go"></TextBlock>
-                        </TabItem.Header>
-                        <StackPanel>
-                            <StackPanel Orientation="Horizontal">
-                            <TextBlock Margin="10,0,0,0">Line Number (1-</TextBlock>
-                                <TextBlock Margin="0" Text="{Binding LineCount}"></TextBlock>
-                                <TextBlock Margin="0" Text="):"></TextBlock>
                             </StackPanel>
-                            <TextBox Margin="5" x:Name="TextBoxGotoString"
+                        </TabItem>
+                        <TabItem IsTabStop="False">
+                            <TabItem.Header>
+                                <TextBlock Style="{StaticResource DialogH1Style}" Text="Go"></TextBlock>
+                            </TabItem.Header>
+                            <StackPanel>
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Margin="10,0,0,0">Line Number (1-</TextBlock>
+                                    <TextBlock Margin="0" Text="{Binding LineCount}"></TextBlock>
+                                    <TextBlock Margin="0" Text="):"></TextBlock>
+                                </StackPanel>
+                                <TextBox Margin="5" x:Name="TextBoxGotoString"
                      Text="{Binding LineNo, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" />
-                          
+
 
                                 <Button Margin="5" IsDefault="True" HorizontalAlignment="Right" Width="65"
                          Command="{Binding GoButtonCommand}">
                                     Go
                                 </Button>
-                            <TextBlock>Ctrl+G | Go </TextBlock>
-                            <TextBlock>ESC | Close</TextBlock>
-                         
-                        </StackPanel>
-                    </TabItem>
-                </TabControl>
+                            </StackPanel>
+                        </TabItem>
+                        <TabItem IsTabStop="False" VerticalContentAlignment="Top">
+                            <TabItem.Resources>
+                                <Style TargetType="{x:Type Button}" x:Key="ToolAreaWindowButtonStyle">
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="{x:Type ButtonBase}">
+                                                <Border x:Name="Chrome" BorderBrush="{TemplateBinding BorderBrush}" Margin="0" Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
+                                                    <ContentPresenter ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}" ContentStringFormat="{TemplateBinding ContentStringFormat}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+                                                </Border>
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                    <Setter Property="Background" Value="Transparent"/>
+                                    <Setter Property="FontFamily" Value="Webdings"/>
+                                    <Setter Property="FontSize" Value="{x:Static SystemFonts.CaptionFontSize}" />
+                                    <Setter Property="Foreground" Value="{DynamicResource ButtonColorBrush}" />
+                                    <Setter Property="Margin" Value="0"/>
+                                    <Style.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Background" Value="{DynamicResource AccentColorBrush2}" />
+                                        </Trigger>
+                                    </Style.Triggers>
+                                </Style>
+                        </TabItem.Resources>
+                            <TabItem.Header>
+                                <Button Content="r" Foreground="DarkGray" Margin="0,0,0,7" Padding="0" Width="25" Height="25" HorizontalAlignment="Right" Style="{StaticResource ToolAreaWindowButtonStyle}">
+                              
+                                </Button>
+                            </TabItem.Header>
+                        </TabItem>
+                    </TabControl>
+             
+
             </Grid>
         </Grid>
     </Grid>
